hero + header built

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,6 +15,13 @@ a {
   color: black;
 }
 
+$color1: white;
+$color2: rgb(46, 46, 46);
+$color3: rgb(0, 104, 136);
+
+body {
+  user-select: none;
+}
 .red {
   color: red;
 }
@@ -27,11 +34,50 @@ a {
 
 @import "admin-styles/mixin";
 
+@import "home";
+
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
 @import "admin-styles/chart";
 @import "admin-styles/dashboardapp";
 @import "admin-styles/mediaquery";
+
+.header {
+  @include flex(row, flex-end, stretch, 1.2rem);
+  padding: 1rem;
+  a {
+    color: $color2;
+    letter-spacing: 2px;
+    font-size: 1.2rem;
+
+    &:hover {
+      color: $color3;
+    }
+  }
+  button {
+    cursor: pointer;
+    font-size: 1.2rem;
+    border: none;
+    background-color: transparent;
+    &:hover {
+      color: $color3;
+    }
+  }
+  dialog {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100px;
+    position: absolute;
+    left: calc(100% - 100px);
+    top: 8%;
+    // now we set the prperties of the div inside the dialog
+    // we can do nesting only because of the scss , normal css doesnt allow this
+    > div {
+      @include flex(column, flex-start, center, 0.25rem);
+    }
+  }
+}
 
 .admin-container {
   @include grid(1fr 4fr, 2rem);
