--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -36,7 +36,8 @@ body {
 
 @import "home";
 @import "cart";
-
+@import "shipping";
+@import "login";
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
 @import "admin-styles/chart";
