--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -38,11 +38,25 @@ body {
 @import "cart";
 @import "shipping";
 @import "login";
+@import "search";
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
 @import "admin-styles/chart";
 @import "admin-styles/dashboardapp";
 @import "admin-styles/mediaquery";
+
+.container {
+  max-width: 1367px;
+  width: 100%;
+  margin: auto;
+  overflow: auto;
+
+  > h1 {
+    @include heading;
+    margin: 1rem 0;
+    text-align: left;
+  }
+}
 
 .header {
   @include flex(row, flex-end, stretch, 1.2rem);
